<resources>
    <string name="app_name">Vivamente</string>
    <string name="ola_mundo">Olá Mundo</string>
    <string name="imagem_de_perfil">Imagem de perfil</string>
    <string name="icone_de_notifica_es">Ícone de notificações</string>
    <string name="pagina_inicial">Página Inicial</string>
    <string name="lembretes">Lembretes</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="home_barra_de_navegacao">Home barra de navegação</string>
    <string name="lembretes_barra_de_navegacao">Lembretes barra de navegação</string>
    <string name="meu_perfil_barra_de_navegacao">Meu Perfil barra de navegação</string>
    <string name="ola_nome_sobrenome">Olá, Nome Sobrenome!</string>
    <string name="tenha_um_otimo_dia">Tenha um ótimo dia!</string>
    <string name="pesquisar">Pesquise aqui...</string>
    <string name="barra_de_pesquisa">barra de pesquisa</string>
    <string name="se_atualize">Se atualize!</string>
    <string name="fique_atualizado">Fique atualizado com o andamento da sua prescrição.</string>
    <string name="todo">TODO</string>
    <string name="ver_tudo">Ver tudo</string>
    <string name="remedy_icon">remedy icon</string>
    <string name="_2_4">2/4</string>
    <string name="remedios">Remédios</string>
    <string name="compromissos">Compromissos</string>
    <string name="exerc_cios">Exercícios</string>
    <string name="atv_cognitivas">Atv.Cognitivas</string>
    <string name="quinta_feira_05_de_agosto_de_2023">Quinta-Feira, 05 de Agosto de 2023</string>
    <string name="agendar">Agendar</string>
    <string name="usu_rio_nome">Usuário nome</string>
    <string name="cuid_rafael_loureiro">Cuid. Rafael Loureiro</string>
    <string name="b">B-</string>
    <string name="tipo_sangu_neo">TIPO SANGUÍNEO</string>
    <string name="leve">Leve</string>
    <string name="grau_do_dia">GRAU DO DIA</string>
    <string name="condicoes_medicas">CONDIÇÕES MÉDICAS</string>
    <string name="cancer_de_mama">Câncer de mama</string>
    <string name="poeira">Poeira</string>
    <string name="alergias">ALERGIAS</string>
    <string name="rivastigmina">Rivastigmina</string>
    <string name="medicamentos_atuais">MEDICAMENTOS ATUAIS</string>
    <string name="logovivamente">LogoVivamente</string>
    <string name="carregando">Carregando</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="fazer_cadastro">Fazer Cadastro</string>
    <string name="fazer_login">Fazer Login</string>
    <string name="escolha_o_tipo_de_conta_que_deseja_criar">Escolha o tipo de conta que deseja criar</string>
    <string name="cuidador">Cuidador</string>
    <string name="cadastro">Cadastro</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="email">Email</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="digite_sua_senha_novamente">Digite sua senha novamente</string>
    <string name="criar_conta">Criar conta</string>
    <string name="ou_entre_com_algum_servi_o">Ou entre com algum serviço</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="verificando_conexao">Verificando conexão com internet...</string>
    <string name="carregando_o_app">Carregando o App</string>
    <string name="entre_em_contato">Entre em contato</string>
    <string name="algo_deu_errado">"Algo deu errado? "</string>
    <string name="vivamente">VivaMente</string>
    <string name="background">background</string>
    <string name="por_30_dias">Por 30 dias</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="_3_comprimidos">3 comprimidos</string>
    <string name="_250mg_via_oral">250mg Via Oral</string>
    <string name="adicionar">Adicionar</string>
    <string name="tomar_s_12_30">Tomar às 12:30</string>
</resources>