<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/vm_background"
        android:padding="30dp"
        android:theme="@style/Base.Theme.Vivamente">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:elevation="0dp"
            android:layout_margin="5dp"
            app:backgroundTint="@color/vm_background"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/roboto_medium_new"
            android:text="@string/entrar"
            android:textColor="@color/browm_login"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_button" />

        <TextView
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium_new"
            android:text="@string/email"
            android:textColor="@color/browm_login"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/email_text_field"
            app:layout_constraintStart_toStartOf="@id/email_text_field" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_field"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="70dp"
            android:hint="@string/digite_seu_email"
            app:boxBackgroundColor="@color/vmNavBarOut"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_txt_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium_new"
            android:text="@string/senha"
            android:textColor="@color/browm_login"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/password_text_field"
            app:layout_constraintStart_toStartOf="@id/password_text_field" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_field"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:hint="@string/digite_sua_senha"
            app:boxBackgroundColor="@color/vmNavBarOut"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_txt_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:elevation="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/password_text_field"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayExtended"
        android:fontFamily="@font/roboto_medium_new"
        android:paddingVertical="18dp"
        android:text="@string/fazer_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:backgroundTint="@color/button_purple" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ou_entre_com_algum_servi_o"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>